qsk-macros/tests/fail/analyze/exit-uexpected-arguments.rs
use qsk_macros::layer;

fn main() {
    layer!(
        ModLayer: {
            F -> Exit(MEOW),
        },
    );
}
