qsk-macros/tests/fail/analyze/exit-uexpected-arguments.stderr
error: unexpected argument
 --> tests/fail/analyze/exit-uexpected-arguments.rs:6:23
  |
6 |             F -> Exit(MEOW),
  |                       ^^^^
